adding doc in pubspec

--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -1,5 +1,5 @@
 name: easychat
-description: "A new Flutter package project."
+description: "Full featured and complete chat package for Flutter and Firebase"
 version: 0.0.4
 homepage: https://github.com/thruthesky/easychat
 
