--- a/.gitignore
+++ b/.gitignore
@@ -1,3 +1,65 @@
+######################
+
+.metadata
+.idea
+
+
+# remove firebase config
+.firebase/
+**/.firebase/
+
+# remove keys
+key.ts
+**/key.ts
+key.dart
+keys.dart
+**/key.dart
+**/keys.dart
+
+
+tmp/
+
+# apps
+apps/
+**/firebase_options.dart
+example/**/firebase_options.dart
+
+
+# example
+example/android/
+example/ios/
+example/web/
+example/linux/
+example/macos/
+example/windows/
+example/build/
+example/.dart_tool/
+example/.packages
+example/.pub/
+example/.flutter-plugins
+example/.flutter-plugins-dependencies
+
+# remove plaforms
+android/
+ios/
+web/
+linux/
+macos/
+windows/
+build/
+
+.dart_tool/
+
+#
+.flutter-plugins
+.flutter-plugins-dependencies
+
+# mkdocs
+venv/
+
+######################
+
+
 # Miscellaneous
 *.class
 *.log
